--- a/myapp/views/main.html
+++ b/myapp/views/main.html
@@ -5,6 +5,6 @@
     {% if list %}
         {{ list }}
     {% else %}
-        <p> 작성된 글이 없습니다.asdasd</p>
+        <p> 작성된 글이 없습니다ㅁㄴㅇㅁㄴㅇㅁㄴㅇ.</p>
     {% endif %}
 {% endblock %}
