--- a/myapp/views/write.html
+++ b/myapp/views/write.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<h1>글 작성 페이지입니다.</h1>
+<h1>글 작성 페이지입니다. ~~</h1>
 <form action="/write" method="post">
     <label for="title">제목</label>
     <input type="text" name="title" id="title">
